<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jejav.jesusjavier.practicabilioteca.FragmentPrincipal">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edIdent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edlibro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/libro"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edAutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/autor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edPersona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/persona"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:inputType="number"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnCrear"
            android:onClick="onClick"
            android:text="@string/crear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnEliminar"
            android:onClick="onClick"
            android:layout_marginTop="5dp"
            android:text="@string/eliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnActualizar"
            android:onClick="onClick"
            android:layout_marginTop="5dp"
            android:text="@string/actualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


    </LinearLayout>

</FrameLayout>
